[package]
name = "min_http11_core"
version = "0.0.1"
edition = "2021"
resolver = "2"
authors = ["Jerome David <programingjd@gmail.com>"]
categories = ["web-programming::http-server"]
description = "Minimum HTTP/1.1 version, request line and headers"
keywords = ["http", "method", "path", "version", "header"]
license = "MIT"
repository = "https://github.com/programingjd/min_http11"
include = [
    "Cargo.toml", "src", "LICENSE", "README.md"
]

[dependencies]


[dependencies.thiserror]
version = "1.0"
default-features = false
features = []

[dependencies.crc32fast]
version = "1.4"
default-features = false
features = ["std"]

[features]
default = []
_minimal = []
