[package]
name = "min_http11_parser"
version = "0.0.1"
edition = "2021"
resolver = "2"
authors = ["Jerome David <programingjd@gmail.com>"]
categories = ["web-programming::http-server"]
description = "Minimum HTTP/1.1 request parser"
keywords = ["http", "request", "parser"]
license = "MIT"
repository = "https://github.com/programingjd/min_http11"
include = [
    "Cargo.toml", "src", "LICENSE", "README.md"
]

[dependencies.min_http11_core]
version = "0.0.1"
path = "../core"
default-features = false
features = []

[dependencies.tokio]
version = "1.36"
default-features = false
features = ["io-util", "time"]

[dependencies.read_until_slice]
version = "0.1"

[dependencies.memchr]
version = "2.7"
default-features = false
features = ["std"]

[dev-dependencies.tokio]
version = "1.36"
default-features = false
features = ["test-util", "macros", "net", "rt"]

[features]
default = []
_minimal = ["min_http11_core/_minimal"]
